2008-05-07 14:15  dezperado

	* : Various fixes to contrast -Wall warning messages. Remains a
	  bogus warning on FontServer.h.
	  Tested with -pedantic flags too, and the following are the files
	  which won't compile:
	  lex.yy.cc FbiStuff.cpp FbiStuffPpm.cpp FbiStuffBmp.cpp
	  FbiStuffGif.cpp FbiStuffTiff.cpp FbiStuffPng.cpp
	  The main reason for this being the F*pp files being the quick C++
	  porting of C fbi stuff
	  ( error: ISO C++ does not allow designated initializers ).

2008-05-06 20:42  dezperado

	* : This version will be released as fim-0.3-alpha.

2008-05-06 20:41  dezperado

	* : Some -Wall and -pedantic oriented corrections, but much more is
	  needed to adapt fbi's C code to correct C++.
	  Fixed the signed-dist rules in Makefile.am.

2008-05-06 08:51  dezperado

	* : Fixed some 64 bit compilation issues, though tested only in -t
	  mode with no aalib.
	  Added --disable-readline (FIM_USE_READLINE symbol).
	  Added 64 bit checks and some fixes (although not all probably).
	  Commented some problematic bison directives (start and require).
	  Added some endianness checks and fixes.
	  Added a fix to compile when readline is linked to the curses
	  library.

2008-05-05 07:34  dezperado

	* : Completed the aalib support.
	  Started working on a libcaca (Coloured Ascii Art) driver
	  Implemented a DummyDisplayDevice class.
	  Discovered weird bugs seemingly related to aalib+screen :)
	  Added to svn the scripts/benchmark.sh script.

2008-05-03 16:18  dezperado

	* : Fixed the negation '!' operator behaviour and added tests to
	  sanity.fim.
	  Implemented a regular expressions matching operator '=~'.
	  Now unquoted strings can be passed as arguments to fim commands,
	  as long as they are quite simple and resemble a simple file name
	  (FILE_PATH token).
	  Implemented the --write-scriptout (-W) option and fixed some
	  broken recording issues.
	  fim -V will print repository version, too .